--- a/File/style.css
+++ b/File/style.css
@@ -14,6 +14,7 @@ h1 {
 
 section {
     display: flex;
+    margin-bottom: 100px;
 }
 
 .info {
@@ -38,4 +39,10 @@ section {
 .top-bannar {
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+
+.drem-big {
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
