--- a/File/style.css
+++ b/File/style.css
@@ -12,7 +12,7 @@ h1 {
     color: orange;
 }
 
-section {
+.sideshow {
     display: flex;
     margin-bottom: 100px;
 }
@@ -45,4 +45,39 @@ section {
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+
+.exprience-item {
+
+    box-shadow: 10px 10px 45px gray;
+    padding: 15px;
+    margin-left: 30px;
+    margin-right: 50px;
+    border-radius: 10px;
+
+
+}
+
+.exprience-area {
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+
+}
+
+#web-dev {
+    border-left: 7px solid;
+    border-image: linear-gradient(blue cyan);
+    border-image-slice: 1;
+}
+
+
+#web-dev-2 {
+    border-left: 7px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+}
+
+footer p {
+    text-align: center;
 }
